--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -22,7 +22,7 @@ Death (unrelated to prostate cancer) & 95\\
 Death (related to prostate cancer) & 2\\
 \midrule
 Median age at diagnosis (years) & 66 (IQR: 61--71)\\
-Median follow-up period per patient (years) &  1.8 (IQR: 0.9--4.0)\\
+Median maximum follow-up per patient (years) &  1.8 (IQR: 0.9--4.0)\\
 Total PSA measurements & 67578\\
 Median number of PSA measurements per patient &  6 (IQR: 4--12)\\
 Median PSA value (ng/mL) & 5.7 (IQR: 4.1--7.7)\\
@@ -35,4 +35,4 @@ Median number of biopsies per patient &  2 (IQR: 1--2)\\
 We selected all 7813 patients who had Gleason grade group~1 at the time of inclusion in PRIAS. Our primary event of interest is an increase in this Gleason grade group upon repeat biopsy, called \textit{upgrading} (1134 patients). Upgrading is a trigger for treatment advice in PRIAS. Although, 2250 patients were provided treatment based on their PSA, or number of biopsy cores with cancer, or anxiety/other reasons. Our reasons for focusing solely on upgrading are, namely, upgrading is strongly associated with cancer-related outcomes, and other triggers for treatment vary between cohorts~\citep{nieboer2018active}.
 
 %UCSF no information on age. Calgary cohort not selected probably because it exists now. But earlier it did not have as many patients as KCL. So KCL was chosen instead.
-For model validation, we selected the largest (in terms of number of repeated measurements) five cohorts from Movember Foundation's GAP3 database version~3.1~\citep{gap3_2018}. These were, namely, the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC). Only patients with a Gleason grade group~1 at the time of inclusion in these cohorts were selected (Supplementary~A.2).
+For model validation, we selected the largest (in terms of number of repeated measurements) six cohorts from Movember Foundation's GAP3 database version~3.1~\citep{gap3_2018}. These were, namely, the University of California San Francisco AS (UCSF, version~3.2),  University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC). Only patients with a Gleason grade group~1 at the time of inclusion in these cohorts were selected. Summary statistics for these cohorts are presented in Supplementary~A.2.
