--- a/report/clinical/supplementary/C_biopsy_scheduling.tex
+++ b/report/clinical/supplementary/C_biopsy_scheduling.tex
@@ -13,7 +13,7 @@ where $b_{jk}$ is the time of the $k$-th biopsy for the $j$-th patient and $b_{j
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{Maximum follow-up period up to which we can reliably make personalized schedules}. In each cohort, this time point is chosen such that there are at least 10 patients who experience upgrading after this time point. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Maximum follow-up period up to which we can reliably make personalized schedules}. In each cohort, this time point is chosen such that there are at least 10 patients who experience upgrading after this time point. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance, \textit{UCSF}: University of California San Francisco Active Surveillance.}
 \label{tab:max_pred_time_repeat}
 \begin{tabular}{l|r}
 \hline
@@ -26,6 +26,7 @@ MUSIC & 2\\
 Toronto & 8\\
 MSKCC & 6\\
 Hopkins & 7\\
+UCSF & 8.5\\
 \hline
 \end{tabular}	
 \end{table}
