--- a/report/clinical/supplementary/D_webapp.tex
+++ b/report/clinical/supplementary/D_webapp.tex
@@ -1,7 +1,7 @@
 % !TEX root =  ../supplementary.tex
 \section{Web Application for Practical Use of Personalized Schedule of Biopsies}
 
-We implemented our methodology in a web-application to assist patients and doctors in better decision making. It works on desktop as well as mobile devices. The cohorts that are currently supported in this web-application are PRIAS and the largest five cohorts from the GAP3 database \citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC). The web-application is hosted at \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. 
+We implemented our methodology in a web-application to assist patients and doctors in better decision making. It works on desktop as well as mobile devices. The cohorts that are currently supported in this web-application are PRIAS and the largest six cohorts from the GAP3 database \citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), Michigan Urological Surgery Improvement Collaborative AS (MUSIC), and University of California San Francisco Active Surveillance (UCSF). The web-application is hosted at \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. 
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/app/landing_page.png}}
