--- a/report/clinical/mainmatter/introduction.tex
+++ b/report/clinical/mainmatter/introduction.tex
@@ -18,4 +18,4 @@ In most AS protocols, biopsies are scheduled periodically. Consequently, upgradi
 
 The first challenge in creating personalized biopsy schedules is developing a statistical model to consolidate accumulated patient data (e.g., PSA, previous biopsy results) into estimates for upgrading-risk. Existing calculators for upgrading-risk~\citep{partin1993use,makarov2007updated} use only the latest PSA measurement of a patient. In contrast, more information is captured by considering all repeated measurements of PSA, previous biopsy results, and baseline characteristics of a patient. To this end, a suitable model is the joint model for time-to-event and longitudinal data~\citep{tomer2019, coley2017prediction,rizopoulos2012joint}. A joint model predicts the upgrading-risk in a personalized manner. A subsequent challenge, however, is translating risks into clinical decisions. For example, a 10\% upgrading-risk can be perceived high/low depending upon the patient's age. Patients may also weigh risks of upgrading with the potential \textit{consequences} of another biopsy. Two relevant consequences of biopsies (Figure~\ref{fig:delay_explanation}) are the timing and the total number of biopsies (burden), and the time delay in detecting upgrading (smaller is beneficial). The relative importance of these consequences can vary between the patients, and also over the follow-up period for the same patient.
 
-The goal of this work is two fold. First, to develop a robust, generalizable model that gives reliable estimates for individual upgrading-risk in AS. Second, to utilize the predicted upgrading-risks to create personalized biopsy schedules. In order to facilitate shared decision making of biopsy schedules, we also intend to provide quantitative estimates of the \textit{consequences} of opting for a personalized versus the standard fixed schedule. For developing our model, we will use the world's largest AS dataset PRIAS. Subsequently, we want to externally validate our model in the largest five AS cohorts from the Movember Foundation's GAP3 database~\citep{gap3_2018}. Last, we intend to implement our model and methodology in a web-application.
+The goal of this work is two fold. First, to develop a robust, generalizable model that gives reliable estimates for individual upgrading-risk in AS. Second, to utilize the predicted upgrading-risks to create personalized biopsy schedules. In order to facilitate shared decision making of biopsy schedules, we also intend to provide quantitative estimates of the \textit{consequences} of opting for a personalized versus the standard fixed schedule. For developing our model, we will use the world's largest AS dataset PRIAS. Subsequently, we want to externally validate our model in the largest six AS cohorts from the Movember Foundation's GAP3 database~\citep{gap3_2018}. Last, we intend to implement our model and methodology in a web-application.
